# pyDEXPI

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
data/dexpi_sample_patterns/column/: column.json  column_pattern_1.pkl
data/dexpi_sample_patterns/compressor/: compressor_pattern_1.pkl  compressor_pattern_2.pkl
data/dexpi_sample_patterns/feed/: feed_pattern.pkl
data/dexpi_sample_patterns/hxer/: heat_exchanger_pattern_1.pkl  (+4 more)
pydexpi/dexpi_classes/: customization.py  dataTypes.py  dexpiBaseModels.py  dexpiModel.py  enumerations.py  equipment.py  graphics.py  instrumentation.py  metaData.py  physicalQuantities.py  piping.py  plantStructure.py  pydantic_classes.py
pydexpi/loaders/: __init__.py  graph_loader.py  json_serializer.py  ml_graph_loader.py  proteus_serializer.py  serializer.py
pydexpi/syndata/: __init__.py  connector_renaming.py  dexpi_pattern.py  generation_history.py  generator.py  generator_function.py  generator_step.py  graph_pattern.py  pattern.py  pattern_distribution.py
pydexpi/toolkits/: base_model_utils.py  instrumentation_toolkit.py  model_toolkit.py  piping_toolkit.py
scripts/: lint  test
tests/: conftest.py
tests/test_loaders/: test_graph_loader.py  test_json_loader.py  test_proteus_serializer.py  test_serializer.py
tests/test_syndata/: conftest.py  test_connector_renaming.py  test_dexpi_pattern.py  test_generation_history.py  test_generator.py  test_generator_function.py  test_generator_step.py  test_graph_pattern.py  test_pattern.py  test_pattern_distribution.py
tests/test_toolkits/: test_base_model_utils.py  test_instrumentation_toolkit.py  test_model_toolkit.py  test_piping_toolkit.py
(+46 files in other folders)
